@@ -9,6 +9,7 @@
  - Fixes bug in result::swap(): protocol versions were not swapped
  - Some errors went undetected when using certain libpq versions
  - Fixes prepared statements on new libpq versions talking to old backends
+ - Can estimate server version if libpq does not know how to obtain it
  - Greatly reduced memory usage while escaping strings
  - With Visual C++, creates lib/ directory if not already present
  - Useful error messages when preparing statements
